force-app/main/default/objects/ClassificationAttributeValue__c/ClassificationAttributeValue__c.object-meta.xml
<CustomObject>
    <label>Classification Attribute Value</label>
    <nameField>
        <label>Classification Attribute Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classification Attribute Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>