force-app/main/default/objects/ClassificationAttributeValue__c/fields/ClassificationAttribute__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Attribute</label>
    <referenceTo>ClassificationAttribute__c</referenceTo>
    <relationshipLabel>Classification Attribute Values</relationshipLabel>
    <relationshipName>Classification_Attribute_Values</relationshipName>
    <type>Lookup</type>
</CustomField>