force-app/main/default/objects/ClassificationAttributeValue__c/fields/ClassificationAttributeValue__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeValue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClassificationAttributeValue</label>
    <referenceTo>ClassificationAttributeValue__c</referenceTo>
    <relationshipLabel>Classification Attribute Values</relationshipLabel>
    <relationshipName>ClassificationAttributeValues</relationshipName>
    <type>Lookup</type>
</CustomField>